feat: update game import logic, add batch game import
